Add image and link to synth

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <head>
 	<meta charset="utf-8">
+	<title>Luis Crespo GitHub site</title>
 </head>
 <body>
 	<h1>My projects</h1>
 	<h2>Synth</h2>
 	<p>
 		Synth (until a better name is found) lets you graphically build a
-		software synthesizer.
+		modular software synthesizer.
 		The <a href="https://webaudio.github.io/web-audio-api/">Web Audio API</a>
 		is used for generating the sound.
+		<img src="img/synth.png">
 	</p>
 	<p>
 		<b>Using synth</b>:
@@ -33,7 +35,11 @@
 	</p>
 	<p>
 		Development is still at a very early stage.
-		Synth repo is at https://github.com/lcrespom/Graph.
+		Synth repo is <a href="https://github.com/lcrespom/Graph">here</a>.
+	</p>
+	<p>
+		<a href="synth/">Try Synth</a>. Did I already mention development is still at a
+		very early stage?
 	</p>
 </body>
 </html>
