--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		modular software synthesizer.
 		The <a href="https://webaudio.github.io/web-audio-api/">Web Audio API</a>
 		is used for generating the sound.
-		<img src="img/synth.png">
+		<div><img src="img/synth.png"><div>
 	</p>
 	<p>
 		<b>Using synth</b>:
@@ -39,7 +39,7 @@
 	</p>
 	<p>
 		<a href="synth/">Try Synth</a>. Did I already mention development is still at a
-		very early stage?
+		very early stage?<
 	</p>
 </body>
 </html>
