--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		modular software synthesizer.
 		The <a href="https://webaudio.github.io/web-audio-api/">Web Audio API</a>
 		is used for generating the sound.
-		<div><img src="img/synth.png"><div>
+		<div><img src="img/synth.png"></div>
 	</p>
 	<p>
 		<b>Using synth</b>:
