--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		modular software synthesizer.
 		The <a href="https://webaudio.github.io/web-audio-api/">Web Audio API</a>
 		is used for generating the sound.
-		<div><img src="img/synth.png"></div>
+		<p>Here is a sample screenshot:
+			<div><img src="img/synth.png"></div>
+		</p>
 	</p>
 	<p>
 		<b>Using synth</b>:
@@ -19,7 +21,7 @@
 			<li>Click any synth node from the palette at the right to add
 				it to the canvas. New nodes are always placed at the center
 				of the canvas and must be manually placed elsewhere.</li>
-			<li>Use drag & drop to move audio nodes around in the canvas</li>
+			<li>Use regular drag & drop to move audio nodes around in the canvas</li>
 			<li>To connect two nodes:
 				<ul>
 					<li>Place the mouse pointer over the source node</li>
@@ -31,6 +33,8 @@
 					<li>Release the shift key to make the connection</li>
 				</ul>
 			</li>
+			<li>To disconnect two nodes, simply make the same connection again, and
+				this time it will be removed</li>
 		</ul>
 	</p>
 	<p>
@@ -39,7 +43,7 @@
 	</p>
 	<p>
 		<a href="synth/">Try Synth</a>. Did I already mention development is still at a
-		very early stage?<
+		very early stage?</p>
 	</p>
 </body>
 </html>
