Descriptive headers in graph, palette & parameters boxes

--- a/synth/index.html
+++ b/synth/index.html
@@ -13,11 +13,13 @@
 
 	<!--------------- Graph canvas --------------->
 	<div class="canvas-box graph-box">
-		<canvas id="graph-canvas" class="graph" width="700" height="500"></canvas>
+		<h5 class="bg-primary box-header">Audio Node Graph</h5>
+		<canvas id="graph-canvas" class="graph" width="700" height="480"></canvas>
 	</div>
 
 	<!--------------- Node palette --------------->
 	<div class="palette graph-box">
+		<h5 class="bg-primary box-header">Palette</h5>
 		<div class="node" data-type="Oscillator">Osc</div>
 		<div class="node" data-type="Gain">Gain</div>
 		<div class="node" data-type="Filter">Filter</div>
@@ -26,6 +28,7 @@
 
 	<!--------------- Current node parameters --------------->
 	<div class="params-box graph-box">
+		<h5 class="bg-primary box-header" id="node-params-hdr">Node Parameters</h5>
 	</div>
 
 	<!--------------- Misc controls --------------->
