Fix in params box header

--- a/synth/index.html
+++ b/synth/index.html
@@ -27,8 +27,9 @@
 	</div>
 
 	<!--------------- Current node parameters --------------->
-	<div class="params-box graph-box">
+	<div class="graph-box">
 		<h5 class="bg-primary box-header" id="node-params-hdr">Node Parameters</h5>
+		<div class="params-box"></div>
 	</div>
 
 	<!--------------- Misc controls --------------->
