--- a/index.html
+++ b/index.html
@@ -51,12 +51,11 @@
 			</ul>
 		</p>
 		<p>
-			Development is still at a very early stage.
-			Synth repo is <a href="https://github.com/lcrespom/Graph">here</a>.
+			Development is still at a very early stage. You can try it <a href="synth/">here</a>.
 		</p>
 		<p>
-			<a href="synth/">Try Synth</a>. Did I already mention development is still at a
-			very early stage?</p>
+			Synth repo is <a href="https://github.com/lcrespom/Graph">here</a>. Please
+			read the ToDo list in README.md before sending any bug report of suggestions.
 		</p>
 	</div>
 </body>
