--- a/synth/index.html
+++ b/synth/index.html
@@ -4,10 +4,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Visual Synth</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-      <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
-      <link rel="stylesheet" href="css/bootstrap/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap/bootstrap-theme.min.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 
@@ -19,7 +18,7 @@
 				<canvas id="graph-canvas" class="graph" width="700" height="480"></canvas>
 			</div>
 		</div><!--
-	
+
 		--------------- Node palette ---------------
 	--><div class="palette graph-box">
 			<h5 class="bg-primary box-header">Palette</h5>
@@ -29,6 +28,7 @@
 			<div class="node" data-type="Delay">Delay</div>
 			<div class="node node-ctrl" data-type="LFO">LFO</div>
 			<div class="node node-ctrl" data-type="GainCtrl">Gain Ctrl</div>
+			<div class="node node-ctrl" data-type="ADSR">ADSR</div>
 		</div>
 	</div>
 
@@ -42,12 +42,14 @@
 
 	<!--------------- Misc controls --------------->
 	<div>
+		<!--
 		<button id="play-stop" class="btn btn-primary">Play</button>
+		-->
 	</div>
 
-    <script src="js/vendor/jquery-1.11.2.min.js"></script>
+	<script src="js/vendor/jquery-1.11.2.min.js"></script>
 	<script src="js/vendor/jquery-ui.min.js"></script>
-    <script src="js/vendor/bootstrap.min.js"></script>
-    <script src="js/bundle.js"></script>
+	<script src="js/vendor/bootstrap.min.js"></script>
+	<script src="js/bundle.js"></script>
 </body>
 </html>
