--- a/synth/index.html
+++ b/synth/index.html
@@ -46,13 +46,13 @@
 					<button id="prev-preset-but" class="btn btn-primary">
 						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 					</button>
-					<div id="preset-num" style="display: inline-block; width: 50px; font-size: 130%; text-align: center">1</div>
+					<div id="preset-num">1</div>
 					<button id="next-preset-but" class="btn btn-primary" style="float: right">
 						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 					</button>
 				</div>
 				<div style="margin: 20px">
-					<input id="preset-name" style="width: 100%; text-align: center">
+					<input id="preset-name">
 				</div>
 				<div style="margin: 45px 10px 0px 10px">
 					<button id="load-but" class="btn btn-primary">
