--- a/synth/index.html
+++ b/synth/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -8,9 +9,12 @@
 	<link rel="stylesheet" href="css/bootstrap/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
 
-	<div>
+<div class="main">
+
+	<div class="graph-row">
 		<!--------------- Graph canvas --------------->
 		<div class="graph-box">
 			<h5 class="bg-primary box-header">Audio Node Graph</h5>
@@ -32,7 +36,7 @@
 		</div>
 	</div>
 
-	<div>
+	<div class="graph-row">
 		<!--------------- Current node parameters --------------->
 		<div class="params-box graph-box">
 			<h5 class="bg-primary box-header" id="node-params-hdr">Node Parameters</h5>
@@ -69,12 +73,14 @@
 	</div>
 
 	<!--------------- Misc controls --------------->
-	<div>
+	<div class="graph-row">
 	</div>
 
-	<script src="js/vendor/jquery-1.11.2.min.js"></script>
-	<script src="js/vendor/jquery-ui.min.js"></script>
-	<script src="js/vendor/bootstrap.min.js"></script>
-	<script src="js/bundle.js"></script>
+</div><!-- end of main -->
+<script src="js/vendor/jquery-1.11.2.min.js"></script>
+<script src="js/vendor/jquery-ui.min.js"></script>
+<script src="js/vendor/bootstrap.min.js"></script>
+<script src="js/bundle.js"></script>
+
 </body>
 </html>
