--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</ul>
 		</p>
 		<p>
-			Development is still at a very early stage. You can try it <a href="synth/">here</a>.
+			You can try it <a href="synth/">here</a>.
 		</p>
 		<p>
 			Synth repo is <a href="https://github.com/lcrespom/Graph">here</a>. Please
