--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 <body>
 	<div class="content">
 		<h1>My projects</h1>
-		<h2>Synth</h2>
+		<h2>Modulator</h2>
 		<p>
-			Synth (until a better name is found) lets you graphically build a
-			modular software synthesizer.
+			Modulator lets you graphically build a modular software synthesizer.
 			The <a href="https://webaudio.github.io/web-audio-api/">Web Audio API</a>
 			is used for generating the sound.
 			<p>Here is a sample screenshot:
@@ -32,8 +31,7 @@
 			<b>Using synth</b>:
 			<ul>
 				<li>Click any synth node from the palette at the right to add
-					it to the canvas. New nodes are always placed at the center
-					of the canvas and must be manually placed elsewhere.</li>
+					it to the canvas</li>
 				<li>Use regular drag & drop to move audio nodes around in the canvas</li>
 				<li>To connect two nodes:
 					<ul>
