--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			You can try it <a href="synth/">here</a>.
 		</p>
 		<p>
-			Synth repo is <a href="https://github.com/lcrespom/Graph">here</a>. Please
+			Synth repo is <a href="https://github.com/lcrespom/Modulator">here</a>. Please
 			read the ToDo list in README.md before sending any bug report of suggestions.
 		</p>
 	</div>
