--- a/synth/prz/index.html
+++ b/synth/prz/index.html
@@ -166,7 +166,7 @@ osc.disconnect();
 	<section>
 		<h1 class="modulator-title">Modulator</h1>
 		<p><a href="http://lcrespom.github.io/synth/">Live Demo</a></p>
-		<p><a href="https://github.com/lcrespom/Modulator">Repo</a></p>
+		<p>Repo at <a href="https://github.com/lcrespom/Modulator">https://github.com/lcrespom/Modulator</a></p>
 	</section>
 
 			</div>
