--- a/synth/prz/index.html
+++ b/synth/prz/index.html
@@ -190,7 +190,7 @@ osc.disconnect();
 			// Full list of configuration options available at:
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
-				controls: true,
+				controls: false,
 				progress: true,
 				history: true,
 				center: true,
