Shortened intro sound

--- a/synth/prz/index.html
+++ b/synth/prz/index.html
@@ -74,7 +74,7 @@
 		<p>Ladies &amp; gentlemen...</p>
 	</section>
 
-	<section data-state="main-title" data-transition="zoom" data-transition-speed="lethargic">
+	<section data-state="main-title" data-transition="zoom-in none" data-transition-speed="lethargic">
 		<h1 class="modulator-title">Sound Synthesis with <b>Web Audio</b></h1>
 		<!--
 		<h3 class="modulator-title">...And my pet project</h3>
@@ -225,7 +225,7 @@ osc.disconnect();
 				setTimeout(function() {
 					console.log('Navigate to main title slide');
 					document.location.hash = '/2';
-				}, 14000);
+				}, 7000);
 			}, false);
 		</script>
 
