Piano and analyzer

--- a/synth/index.html
+++ b/synth/index.html
@@ -93,7 +93,7 @@
 					<button id="prev-octave-but" class="btn btn-primary btn-sm">
 						-
 					</button>
-					<div style="display: inline-block; width: 30px; text-align: center">C3</div>
+					<div id="octave-label" style="display: inline-block; width: 30px; text-align: center">C3</div>
 					<button id="next-octave-but" class="btn btn-primary btn-sm">
 						+
 					</button>
