--- a/synth/index.html
+++ b/synth/index.html
@@ -32,6 +32,7 @@
 					<div class="palette-section">Sources</div>
 					<div class="node node-src" data-type="Oscillator">Osc</div>
 					<div class="node node-src" data-type="Buffer">Buffer</div>
+					<div class="node node-src" data-type="Noise">Noise</div>
 					<div class="palette-section">Effects</div>
 					<div class="node node-effect" data-type="Gain">Gain</div>
 					<div class="node node-effect" data-type="Filter">Filter</div>
