--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			The <a href="https://webaudio.github.io/web-audio-api/">Web Audio API</a>
 			is used for generating the sound.
 			<p>Here is a sample screenshot:
-				<div><img src="img/synth.png" width="826"></div>
+				<div style="text-align: center"><img src="img/synth.png" width="826"></div>
 			</p>
 		</p>
 		<p>
