--- a/synth/index.html
+++ b/synth/index.html
@@ -13,6 +13,14 @@
 
 <body>
 
+<!--
+<div style="position: absolute">
+	<button class="btn btn-sm btn-info" style="border-radius: 30px">
+		<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
+	</button>
+</div>
+-->
+
 <div class="main">
 
 	<div class="graph-row">
