--- a/synth/prz/index.html
+++ b/synth/prz/index.html
@@ -115,6 +115,11 @@
 	</section>
 
 	<section>
+		<h3 style="text-transform: inherit">http://caniuse.com/#feat=audio-api</h3>
+		<img class="stretch" src="img/caniuse.png">
+	</section>
+
+	<section>
 		<h2>Web Audio API</h2>
 		<ul>
 			<li>AudioContext</li>
