--- a/synth/index.html
+++ b/synth/index.html
@@ -14,10 +14,18 @@
 <body>
 
 <!--
-<div style="position: absolute">
-	<button class="btn btn-sm btn-info" style="border-radius: 30px">
-		<span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
-	</button>
+<div class="app-navbar" style="width: 810px; margin: -3px auto 5px; position: relative">
+	<div style="float: left; margin-top: 4px">
+		<button class="btn btn-primary btn-sm">Synth</button>
+		<button class="btn btn-primary btn-sm" style="padding: 5px">Tracker</button>
+	</div>
+	<div style="width: 250px; margin: 0 auto">
+		<img src="img/modulator.png" style="width:250px">
+	</div>
+	<div style="display: inline-block; position: absolute; right: 6px; top: 0px; margin-top: 4px">
+		<button class="btn btn-primary btn-sm">About</button>
+		<button class="btn btn-primary btn-sm">Help</button>
+	</div>
 </div>
 -->
 
