LFO Noise control node

--- a/synth/index.html
+++ b/synth/index.html
@@ -59,6 +59,7 @@
 					<div class="node node-ctrl" data-type="LFO">LFO</div>
 					<div class="node node-ctrl" data-type="GainCtrl">Gain Ctrl</div>
 					<div class="node node-ctrl" data-type="ADSR">ADSR</div>
+					<div class="node node-ctrl" data-type="NoiseCtrl">Noise</div>
 				</div>
 			</div>
 		</div>
