--- a/synth/index.html
+++ b/synth/index.html
@@ -56,6 +56,7 @@
 					<div class="node node-effect" data-type="Delay">Delay</div>
 					<div class="node node-effect" data-type="StereoPan">Pan</div>
 					<div class="node node-effect" data-type="Compressor">Compr</div>
+					<div class="node node-effect" data-type="Detuner">Detuner</div>
 					<div class="palette-section">Controllers</div>
 					<div class="node node-ctrl" data-type="LFO">LFO</div>
 					<div class="node node-ctrl" data-type="GainCtrl">Gain Ctrl</div>
