Added pitch shift patch

--- a/synth/index.html
+++ b/synth/index.html
@@ -45,23 +45,54 @@
 			<h5 class="bg-primary box-header">Palette</h5>
 			<div class="nano">
 				<div class="nano-content">
+
 					<div class="palette-section">Sources</div>
-					<div class="node node-src" data-type="Oscillator">Osc</div>
-					<div class="node node-src" data-type="Buffer">Buffer</div>
-					<div class="node node-src" data-type="Noise">Noise</div>
-					<div class="node node-src" data-type="LineIn">Line In</div>
+					<div class="node node-src" data-type="Oscillator">
+						<div class="node-text">Osc</div>
+					</div>
+					<div class="node node-src" data-type="Buffer">
+						<div class="node-text">Buffer</div>
+					</div>
+					<div class="node node-src" data-type="Noise">
+						<div class="node-text">Noise</div>
+					</div>
+					<div class="node node-src" data-type="LineIn">
+						<div class="node-text">Line In</div>
+					</div>
+
 					<div class="palette-section">Effects</div>
-					<div class="node node-effect" data-type="Gain">Gain</div>
-					<div class="node node-effect" data-type="Filter">Filter</div>
-					<div class="node node-effect" data-type="Delay">Delay</div>
-					<div class="node node-effect" data-type="StereoPan">Pan</div>
-					<div class="node node-effect" data-type="Compressor">Compr</div>
-					<div class="node node-effect" data-type="Detuner">Detuner</div>
+					<div class="node node-effect" data-type="Gain">
+						<div class="node-text">Gain</div>
+					</div>
+					<div class="node node-effect" data-type="Filter">
+						<div class="node-text">Filter</div>
+					</div>
+					<div class="node node-effect" data-type="Delay">
+						<div class="node-text">Delay</div>
+					</div>
+					<div class="node node-effect" data-type="StereoPan">
+						<div class="node-text">Pan</div>
+					</div>
+					<div class="node node-effect" data-type="Compressor">
+						<div class="node-text">Compr</div>
+					</div>
+					<div class="node node-effect" data-type="Detuner">
+						<div class="node-text">Pitch</br>Shifter</div>
+					</div>
+
 					<div class="palette-section">Controllers</div>
-					<div class="node node-ctrl" data-type="LFO">LFO</div>
-					<div class="node node-ctrl" data-type="GainCtrl">Gain Ctrl</div>
-					<div class="node node-ctrl" data-type="ADSR">ADSR</div>
-					<div class="node node-ctrl" data-type="NoiseCtrl">Noise</div>
+					<div class="node node-ctrl" data-type="LFO">
+						<div class="node-text">LFO</div>
+					</div>
+					<div class="node node-ctrl" data-type="GainCtrl">
+						<div class="node-text">Gain<br>Control</div>
+					</div>
+					<div class="node node-ctrl" data-type="ADSR">
+						<div class="node-text">ADSR</div>
+					</div>
+					<div class="node node-ctrl" data-type="NoiseCtrl">
+						<div class="node-text">Noise</div>
+					</div>
 				</div>
 			</div>
 		</div>
