--- a/synth/index.html
+++ b/synth/index.html
@@ -29,6 +29,17 @@
 </div>
 -->
 
+<!-- "Fork me on github" ribbon -->
+<!--
+<a href="https://github.com/lcrespom/Modulator">
+	<img style="position: absolute; top: 0; left: 0; border: 0; z-index: 1000"
+		src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67"
+		alt="Fork me on GitHub"
+		data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png">
+</a>
+-->
+
+<!-- Main app area -->
 <div class="main">
 
 	<div class="graph-row">
@@ -168,6 +179,7 @@
 	</div>
 
 </div><!-- end of main -->
+
 <script src="js/vendor/jquery-1.11.2.min.js"></script>
 <script src="js/vendor/jquery-ui.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
