--- a/synth/index.html
+++ b/synth/index.html
@@ -162,7 +162,12 @@
 						+
 					</button>
 				</span>
-				<!--<span style="font-size: 90%; line-height:4em">Portamento</span>-->
+				<!--
+				<div style="display: inline-block">
+  					<input value="0" type="range" style="top: 3px; position: relative;">
+					<span style="font-size: 90%; line-height:0px">Portamento</span>
+				</div>
+				-->
 				<button id="poly-but" class="btn btn-primary btn-sm" style="float:right">
 					Poly
 				</button>
