Updated link to support line in

--- a/synth/prz/index.html
+++ b/synth/prz/index.html
@@ -252,7 +252,7 @@ osc.disconnect();
 	<section data-background="#D4FFBB" class="light">
 		<img src="img/modulator.png"
 			style="border: none; background-color: inherit; box-shadow: none">
-		<p><a href="http://lcrespom.github.io/synth/">Live Demo</a></p>
+		<p><a href="https://lcrespom.github.io/synth/">Live Demo</a></p>
 		<p>Repo at <a href="https://github.com/lcrespom/Modulator">https://github.com/lcrespom/Modulator</a></p>
 	</section>
 
