Preset upload and download

--- a/synth/index.html
+++ b/synth/index.html
@@ -123,10 +123,11 @@
 					<input id="preset-name">
 				</div>
 				<div style="margin: 45px 10px 0px 10px; position: relative">
-					<button id="load-but" class="btn btn-primary">
+					<span id="load-but" class="btn btn-primary upload">
+					    <input type="file" id="load-file">
 						Load&nbsp;
 						<span class="glyphicon glyphicon-open" aria-hidden="true"></span>
-					</button>
+					</span>
 					<button id="save-but" class="btn btn-primary"
 						style="position: absolute; right: 0">
 						Save&nbsp;
