--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
 			font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 		}
 		.content {
-			margin-left: auto;
-			margin-right: auto;
-			margin-top: 1em;
-			margin-bottom: 1em;
-			max-width: 850px;
+			margin: 1em auto;
 		}
 		h1, h2 {
-			margin-bottom: 1px solid #CCC;
+			border-bottom: 1px solid #CCC;
+			padding-bottom: 4px;
 		}
 	</style>
 </head>
