Added closing slide

--- a/synth/prz/index.html
+++ b/synth/prz/index.html
@@ -78,8 +78,14 @@
 			section.light a {
 				color: blue;
 			}
-			section.light a: hover {
+			section.light a:hover {
 				color: navy-blue !important;
+			}
+			img.img-noeffects {
+				margin: 0 !important;
+				box-shadow: inherit !important;
+				background: inherit !important;
+				border: none !important;
 			}
 		</style>
 
@@ -255,6 +261,36 @@ osc.disconnect();
 		<p><a href="https://lcrespom.github.io/synth/">Live Demo</a></p>
 		<p>Repo at <a href="https://github.com/lcrespom/Modulator">https://github.com/lcrespom/Modulator</a></p>
 	</section>
+
+	<section>
+		<h1>Thank you</h1>
+		<div style="display:inline-block">
+			<br>
+			<div style="text-align: left">
+				<div style="border-radius: 10px; background-color: #55ACEE; padding: 10px;
+					display: inline-block; width: 80px; height: 80px">
+					<img src="img/TwitterLogo_white.png"
+						class="img-noeffects" style="width: 100px; height: 100px;">
+				</div>
+				<span style="position: relative; bottom: 20px; left: 20px">
+					<a href="https://twitter.com/lcrespom">@lcrespom</a>
+				</span>
+			</div>
+			<div style="text-align: left; margin-top: 30px">
+				<div style="border-radius: 10px; padding: 10px;
+					display: inline-block; width: 80px; height: 80px">
+					<img src="img/GitHub-Mark-Light-120px-plus.png"
+						class="img-noeffects" style="width: 100px; height: 100px;">
+				</div>
+				<span style="position: relative; bottom: 20px; left: 20px">
+					<a href="https://lcrespom.github.io">https://lcrespom.github.io</a>
+				</span>
+			</div>
+		</div>
+		<p><br>Contributions are welcome</p>
+	</section>
+
+
 
 			</div>
 		</div>
