Updated main page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 			You can check its <a href="synth/help.html">documentation</a>, and 
 			get the source code from the
 			<a href="https://github.com/lcrespom/Modulator">GitHub repository</a>.
+			There is also a <a href="/synth/prz">presentation</a>
+			that I use when I give a talk about Web Audio
+			and Modulator.
 		</p>
 		<p>Contributions are welcome. Please read the ToDo list in README.md from the
 			repository for suggestions.
