--- a/synth/index.html
+++ b/synth/index.html
@@ -17,14 +17,14 @@
 <div class="app-navbar">
 	<div style="float: left; margin-top: 4px">
 		<a href="http://github.com/lcrespom/Modulator" target="_blank"
-			class="btn btn-primary btn-sm" style="width: 4em">Code</a>
+			class="btn btn-primary btn-sm" style="width: 4em; padding: 5px">Code</a>
 	</div>
 	<div style="width: 250px; margin: 0 auto">
 		<img src="img/logo.png" style="width: 250px">
 	</div>
 	<div style="display: inline-block; position: absolute; right: 6px; top: 0px; margin-top: 4px">
 		<a href="help.html" target="_blank"
-			class="btn btn-primary btn-sm" style="width: 4em">Help</a>
+			class="btn btn-primary btn-sm" style="width: 4em; padding: 5px">Help</a>
 	</div>
 </div>
 
