--- a/synth/help.html
+++ b/synth/help.html
@@ -100,6 +100,9 @@
 		continues on the upper row so <code>Q</code> corresponds with the middle <b>C</b>
 		key of the piano and grows to <code>P</code>.
 	</p>
+	<p>If an external MIDI keyboard is connected, it can also be used as an input
+		for notes.
+	</p>
 	<p>The synthesizer is monophonic by default, but can be played in polyphonic mode.
 		The number of polyphonic voices is set to 5. Synth editing is disabled in
 		polyphonic mode, because of the inherent complexity of modifying the
