Doc and log piano sliders

--- a/synth/help.html
+++ b/synth/help.html
@@ -95,7 +95,7 @@
  	<h2>Piano keyboard</h2>
 	<img src="img/piano.png" width="278.5" class="figure">
 	<p>The piano keyboard can be clicked with the mouse, or the PC keyboard
-		can be used to send notes to the synthesizer. Key <code>A</code> corresponds
+		can be used to send notes to the synthesizer. Key <code>Z</code> corresponds
 		with the lowest pitch <b>C</b> key of the piano, and grows to <code>M</code>, then
 		continues on the upper row so <code>Q</code> corresponds with the middle <b>C</b>
 		key of the piano and grows to <code>P</code>.
