Patch selection panel

--- a/synth/index.html
+++ b/synth/index.html
@@ -113,11 +113,17 @@
 					<button id="prev-preset-but" class="btn btn-primary">
 						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 					</button>
-					<div id="preset-num">1</div>
+					<button id="preset-num" class="btn btn-default">
+						1
+					</button>
 					<button id="next-preset-but" class="btn btn-primary"
 						style="position: absolute; right: 0">
 						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 					</button>
+					<div class="preset-selector">
+						<select size="2">
+						</select>
+					</div>
 				</div>
 				<div style="margin: 20px">
 					<input id="preset-name">
